# serac_build_example

./: CMakeLists.txt  README.md  lib.cpp  lib.cu  lib.hpp  main.cpp  main.cu
axom/: CMakeLists.txt  core.cpp  core.cu  core.cuh  core.hpp  main.cpp  main.cu  test.cpp  transform.cu
axom/core_project/: CMakeLists.txt  core.hpp  test.cpp  vec3.hpp
axom/cpp_cuda_project/: CMakeLists.txt  geometry.cu  geometry.hpp  test.cu
axom/cpp_only_project/: CMakeLists.txt  parse_input.cpp  parse_input.hpp  test.cpp
